--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "connect-mongo": "^5.1.0",
     "core-js": "^3.44.0",
     "css-loader": "^7.1.2",
+    "csurf": "^1.11.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.17.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "mongoose": "^8.17.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0"
